--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "react-share": "^4.4.0",
     "sass": "^1.32.8"
   },
-  "homepage": "https://twinsynergy.github.io/next-contentful"
+  "homepage": "/next-contentful"
 }
